--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,11 +12,7 @@ html {
 }
 
 body {
-  background: linear-gradient(
-    190deg,
-    rgb(134, 123, 205) 0%,
-    rgb(106, 90, 171) 100%
-  );
+  background: #0b4341;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
